# broken-app

./: Dockerfile  README.md  entrypoint.sh  nginx.conf.template  pyproject.toml  requirements.txt
src/: job.py  main.py  serve.py
src/utilities/: __init__.py  s3_connector.py  supabase_connector.py
